modified javascript variable type blog

--- a/_posts/2013-07-16-javascript-variable-type.html
+++ b/_posts/2013-07-16-javascript-variable-type.html
@@ -1,16 +1,50 @@
 ---
 layout: default_post
-title : Javascript基础之——变量类型详解
+title : Javascript基础之——数据类型详解
 ---
 
 
 <h3>变量</h3>
 
 
+<p>变量是存储信息的容器。</p>
+<p>JavaScript 语句和 JavaScript 变量都对大小写敏感。</p>
+
+<p>在 JavaScript 中创建变量通常称为"声明"变量。</p>
+
+
+<h3>数据类型</h3>
+
+
+<h4>基本类型</h4>
+
+
+<h5>字符串</h5>
+
+<h5>数字</h5>
+
+
+<h5>布尔</h5>
+
+
+
+<h5>Null</h5>
+
+
+<h5>Undefined</h5>
 
 
 
 
 
+<h4>引用类型</h4>
+
+<h5>数组类型</h5>
+
+
+
+
+
+<h5>对象类型</h5>
 
 
