--- a/_posts/2013-07-16-javascript-variable-type.html
+++ b/_posts/2013-07-16-javascript-variable-type.html
@@ -16,35 +16,46 @@ title : Javascript基础之——数据类型详解
 <h3>数据类型</h3>
 
 
-<h4>基本类型</h4>
-
+<h4>基本类型（原始类型）</h4>
+<p>原始类型（primitive type）</p>
 
 <h5>字符串</h5>
+<p>字符串可以是引号中的任意文本。您可以使用单引号或双引号：</p>
 
 <h5>数字</h5>
-
+<p>JavaScript 只有一种数字类型。数字可以带小数点，也可以不带：</p>
 
 <h5>布尔</h5>
-
+<p>布尔（逻辑）只能有两个值：true 或 false。</p>
 
 
 <h5>Null</h5>
 
 
 <h5>Undefined</h5>
+ 
 
+<h5>typeof运算符</h5>
 
-
+<p>typeof 运算符有一个参数，即要检查的变量或值。例如：</p>
+<p>对变量或值调用 typeof 运算符将返回下列值之一：</p>
+<ul>
+	<li>undefined - 如果变量是 Undefined 类型的</li>
+	<li>boolean - 如果变量是 Boolean 类型的</li>
+	<li>number - 如果变量是 Number 类型的</li>
+	<li>string - 如果变量是 String 类型的</li>
+	<li>object - 如果变量是一种引用类型或 Null 类型的</li>
+</ul>
 
 
 <h4>引用类型</h4>
+
 
 <h5>数组类型</h5>
 
 
 
 
-
 <h5>对象类型</h5>
-
+<p>对象由花括号分隔。在括号内部，对象的属性以名称和值对的形式 (name : value) 来定义。属性由逗号分隔：</p>
 
