modified  javascript variable blog

--- a/_posts/2013-07-16-javascript-variable-type.html
+++ b/_posts/2013-07-16-javascript-variable-type.html
@@ -19,21 +19,41 @@ title : Javascript基础之——数据类型详解
 <h4>基本类型（原始类型）</h4>
 <p>原始类型（primitive type）</p>
 
+
+
 <h5>字符串</h5>
+<p>String 类型的独特之处在于，它是唯一没有固定大小的原始类型。可以用字符串存储 0 或更多的 Unicode 字符，有 16 位整数表示（Unicode 是一种国际字符集，本教程后面将讨论它）。</p>
+<p>字符串字面量是由双引号（"）或单引号（'）声明的。而 Java 则是用双引号声明字符串，用单引号声明字符。但是由于 ECMAScript 没有字符类型，所以可使用这两种表示法中的任何一种。例如，下面的两行代码都有效：</p>
 <p>字符串可以是引号中的任意文本。您可以使用单引号或双引号：</p>
 
+
+
+
 <h5>数字</h5>
+<p>ECMA-262 中定义的最特殊的类型是 Number 类型。这种类型既可以表示 32 位的整数，还可以表示 64 位的浮点数。</p>
 <p>JavaScript 只有一种数字类型。数字可以带小数点，也可以不带：</p>
 
+
+
+
+
 <h5>布尔</h5>
-<p>布尔（逻辑）只能有两个值：true 或 false。</p>
+<p>Boolean 类型是 ECMAScript 中最常用的类型之一。它有两个值 true 和 false （即两个 Boolean 字面量）。</p>
+<p>即使 false 不等于 0，0 也可以在必要时被转换成 false，这样在 Boolean 语句中使用两者都是安全的。</p>
 
 
-<h5>Null</h5>
 
 
 <h5>Undefined</h5>
+<p>如前所述，Undefined 类型只有一个值，即 undefined。当声明的变量未初始化时，该变量的默认值是 undefined。</p>
  
+
+
+<h5>Null</h5>
+<p>另一种只有一个值的类型是 Null，它只有一个专用值 null，即它的字面量。值 undefined 实际上是从值 null 派生来的，因此 ECMAScript 把它们定义为相等的。</p>
+
+
+
 
 <h5>typeof运算符</h5>
 
@@ -49,7 +69,7 @@ title : Javascript基础之——数据类型详解
 
 
 <h4>引用类型</h4>
-
+<p>引用类型通常叫做类（class），也就是说，遇到引用值，所处理的就是对象。</p>
 
 <h5>数组类型</h5>
 
@@ -59,3 +79,4 @@ title : Javascript基础之——数据类型详解
 <h5>对象类型</h5>
 <p>对象由花括号分隔。在括号内部，对象的属性以名称和值对的形式 (name : value) 来定义。属性由逗号分隔：</p>
 
+<p><strong>注意：</strong>从传统意义上来说，ECMAScript 并不真正具有类。事实上，除了说明不存在类，在 ECMA-262 中根本没有出现“类”这个词。ECMAScript 定义了“对象定义”，逻辑上等价于其他程序设计语言中的类。</p>
