modified javascript variable type blog

--- a/_posts/2013-07-16-javascript-variable-type.html
+++ b/_posts/2013-07-16-javascript-variable-type.html
@@ -60,11 +60,12 @@ title : Javascript基础之——数据类型详解
 <p>typeof 运算符有一个参数，即要检查的变量或值。例如：</p>
 <p>对变量或值调用 typeof 运算符将返回下列值之一：</p>
 <ul>
-	<li>undefined - 如果变量是 Undefined 类型的</li>
-	<li>boolean - 如果变量是 Boolean 类型的</li>
-	<li>number - 如果变量是 Number 类型的</li>
-	<li>string - 如果变量是 String 类型的</li>
-	<li>object - 如果变量是一种引用类型或 Null 类型的</li>
+	<li>undefined —— 变量是 Undefined 类型的</li>
+	<li>boolean   —— 变量是 Boolean 类型的</li>
+	<li>number    —— 变量是 Number 类型的</li>
+	<li>string    —— 变量是 String 类型的</li>
+	<li>function  —— 变量是Function 类型</li>
+	<li>object    —— 变量是一种引用类型或 Null 类型的</li>
 </ul>
 
 
