modified javascript variable type blog

--- a/_posts/2012-09-24-javascript-feature.html
+++ b/_posts/2012-09-24-javascript-feature.html
@@ -29,7 +29,7 @@ title : Javascript语言的“精髓”
 
 <p>Javascript同时结合了函数式编程和面向对象编程的特点，这很可能是历史上的第一例。而且直到今天为止，Javascript仍然是世界上唯一使用Prototype继承模型的主要语言。</p>
 
-
+<p>JavaScript不是纯粹的面向对象语言，它是混合语言，所以所谓“一切面向对象”既是宣传用语，也是一种语言处理技巧。</p>
 
 
 
