--- a/_posts/2013-07-16-javascript-variable-type.html
+++ b/_posts/2013-07-16-javascript-variable-type.html
@@ -4,8 +4,10 @@ title : Javascript基础之——数据类型详解
 ---
 
 
-<h3>变量</h3>
+<h3>数据类型</h3>
 
+
+<p>JavaScript既是过程式语言，也是面向对象的语言。这一定程度上，也表现为：它实际上有两套类型系统。第一套类型系统是用typeof来识别，这是这个语言的基本类型系统，只有六种类型，即undefined、number、boolean、string、object与function。我一般也称之为基础类型系统。之所以称为"基础"，是因为第二套类型系统是以它为基础，从object这一种类型中发展起来的，即对象类型系统。</p>
 
 <p>变量是存储信息的容器。</p>
 <p>JavaScript 语句和 JavaScript 变量都对大小写敏感。</p>
