add javascript variable type blog

--- a/_posts/2013-07-16-javascript-variable-type.html
+++ b/_posts/2013-07-16-javascript-variable-type.html
@@ -4,55 +4,53 @@ title : Javascript基础之——数据类型详解
 ---
 
 
-<h3>数据类型</h3>
 
 
 
+<h3>变量和数据类型</h3>
 
-<p>变量是存储信息的容器。</p>
-<p>JavaScript 语句和 JavaScript 变量都对大小写敏感。</p>
-
-<p>在 JavaScript 中创建变量通常称为"声明"变量。</p>
-
-
-<h3>数据类型</h3>
-
-
-<h4>基本类型（原始类型）</h4>
-<p>原始类型（primitive type）</p>
+<h4>变量</h4>
+<p>变量是存储信息的容器。在JavaScript中，变量对大小写敏感。</p>
 
 
 
-<h5>字符串</h5>
+<h4>数据类型分类</h4>
+
+<ul>
+	<li>基本数据类型：数值型 （number）、字符串型（string）、逻辑型（boolean）；</li>
+	<li>特殊数据类型：无定义数据类型 （undefined）、空值(null)；</li>
+	<li>复合数据类型：函数（function）、对象（object）、数组 （array）；</li>
+</ul>
+
+<h4>基本数据类型</h4>
+<p>基本数据类型又成为原始类型（primitive type），它主要包含数字类型，字符串类型和布尔类型三种。</p>
+
+
+<h5>数字类型</h5>
+<p>ECMA-262 中定义的最特殊的类型是 Number 类型。这种类型既可以表示 32 位的整数，还可以表示 64 位的浮点数。</p>
+<p>JavaScript 只有一种数字类型。数字可以带小数点，也可以不带：</p>
+
+<h5>字符串类型</h5>
 <p>String 类型的独特之处在于，它是唯一没有固定大小的原始类型。可以用字符串存储 0 或更多的 Unicode 字符，有 16 位整数表示（Unicode 是一种国际字符集，本教程后面将讨论它）。</p>
 <p>字符串字面量是由双引号（"）或单引号（'）声明的。而 Java 则是用双引号声明字符串，用单引号声明字符。但是由于 ECMAScript 没有字符类型，所以可使用这两种表示法中的任何一种。例如，下面的两行代码都有效：</p>
 <p>字符串可以是引号中的任意文本。您可以使用单引号或双引号：</p>
 
-
-
-
-<h5>数字</h5>
-<p>ECMA-262 中定义的最特殊的类型是 Number 类型。这种类型既可以表示 32 位的整数，还可以表示 64 位的浮点数。</p>
-<p>JavaScript 只有一种数字类型。数字可以带小数点，也可以不带：</p>
-
-
-
-
-
-<h5>布尔</h5>
+<h5>布尔类型</h5>
 <p>Boolean 类型是 ECMAScript 中最常用的类型之一。它有两个值 true 和 false （即两个 Boolean 字面量）。</p>
 <p>即使 false 不等于 0，0 也可以在必要时被转换成 false，这样在 Boolean 语句中使用两者都是安全的。</p>
 
 
 
+<h4>特殊数据类型</h4>
+<p>特殊数据类型包括两种定义为"空"的数据类型，即undefined类型和null类型。</p>
 
-<h5>Undefined</h5>
+<h5>Undefined类型</h5>
 <p>如前所述，Undefined 类型只有一个值，即 undefined。当声明的变量未初始化时，该变量的默认值是 undefined。</p>
  
 
-
-<h5>Null</h5>
+<h5>Null类型</h5>
 <p>另一种只有一个值的类型是 Null，它只有一个专用值 null，即它的字面量。值 undefined 实际上是从值 null 派生来的，因此 ECMAScript 把它们定义为相等的。</p>
+
 
 
 
@@ -71,19 +69,25 @@ title : Javascript基础之——数据类型详解
 </ul>
 
 
+
+
+
+
+
 <h4>引用类型</h4>
-<p>引用类型通常叫做类（class），也就是说，遇到引用值，所处理的就是对象。</p>
+<p>复合数据类型也通常叫做引用类型通常叫做类（class），也就是说，遇到引用值，所处理的就是对象。</p>
 
 <h5>数组类型</h5>
+<p></p>
 
-
+<h5>Function类型</h5>
+<p></p>
 
 
 <h5>对象类型</h5>
 <p>对象由花括号分隔。在括号内部，对象的属性以名称和值对的形式 (name : value) 来定义。属性由逗号分隔：</p>
 
 <p><strong>注意：</strong>从传统意义上来说，ECMAScript 并不真正具有类。事实上，除了说明不存在类，在 ECMA-262 中根本没有出现“类”这个词。ECMAScript 定义了“对象定义”，逻辑上等价于其他程序设计语言中的类。</p>
-
 
 
 
@@ -118,4 +122,8 @@ title : Javascript基础之——数据类型详解
 <p>JavaScript中的类包装过程出现然属性存取中，即“.运算符”或“[]运算符”。当这两个运算符发现左操作数x是一个“值类型”数据时，将隐式地调用Object(x)过程将它转为对象</p>
 
 
-<p>'abc'.length; 这个运算实际上就等效于 Object('abc').length;</p>
+<p>"abc".length; 这个运算实际上就等效于 Object("abc").length;</p>
+
+
+
+<p>在Javascript存在数据类型的转换，一般有显示转换和隐式转换两种。</p>
