--- a/name.html
+++ b/name.html
@@ -13,18 +13,26 @@
     <script src="/js/html5.js"></script>
     <![endif]-->
     <style>
-    h2{text-align:center;}
-    .map_list li{font-size:20px; line-height:45px;}
+    h2{text-align:center; font-size:60px;}
+    .name_list{
+        width:320px;
+        margin:20px auto;
+    }
+    .name_list li{
+        list-style: none;
+        font-size:32px; 
+        line-height:60px;
+    }
+    .name_list .male{color:blue;}
+    .name_list .female{color:pink;}
     </style>
 </head>
 <body>
 
-    <h2>个人网站页面列表（备忘）</h2>
-    <ul class="map_list">
-        <li><a href="/resume.html">于彪斌的简历</a></li>
-        <li><a href="/rubik.html">HTML5游戏——小魔方</a></li>
-        <li><a href="/drivepath.html">2014自驾游路线</a></li>
-        <li><a href="/name.html">2015年小BB降生</a></li>
+    <h2>取名</h2>
+    <ul class="name_list">
+        <li><span class="male">男孩</span> —— 韩远鹏</li>
+        <li><span class="female">女孩</span> —— 韩心怡</li>
     </ul>
 
 
