add some nother name

--- a/name.html
+++ b/name.html
@@ -25,6 +25,12 @@
     }
     .name_list .male{color:blue;}
     .name_list .female{color:pink;}
+    .name_box{width:600px; margin:20px auto;}
+    .name_box li{
+        list-style:none; 
+        float:left;
+        width:100px;
+    }
     </style>
 </head>
 <body>
@@ -34,6 +40,16 @@
         <li><span class="male">男孩</span> —— 韩远鹏</li>
         <li><span class="female">女孩</span> —— 韩心怡</li>
     </ul>
+    <div class="name_box">
+        备选：
+        <ul>
+            <li>韩志平(男)</li>
+            <li>韩慧慧(女)</li>
+            <li>韩明远(男)</li>
+            <li>韩小琴(女)</li>
+            <li>韩东生(男)</li>
+        </ul>
+    </div>
 
 
 </body>
