add name pages content

--- a/name.html
+++ b/name.html
@@ -44,6 +44,7 @@
         备选：
         <ul>
             <li>韩志平(男)</li>
+            <li>韩志远(男)</li>
             <li>韩慧慧(女)</li>
             <li>韩明远(男)</li>
             <li>韩小琴(女)</li>
