--- a/list.html
+++ b/list.html
@@ -28,5 +28,18 @@
     </ul>
 
 
+
+
+
+
+
+
+    <script type="text/javascript">
+    var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+    document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F7cfeeba2e3844f06b817b0b2cb423ce9' type='text/javascript'%3E%3C/script%3E"));
+    </script>
+
+
+    
 </body>
 </html>
