remove baidu analytic script image style

--- a/drivepath.html
+++ b/drivepath.html
@@ -22,6 +22,12 @@
         color:red;
         font-weight:bold;
     };
+
+
+
+    /*去除百度检测图片样式*/
+    img[src="http://eiv.baidu.com/hmt/icon/21.gif"]{display:none;}
+
     </style>
 </head>
 <body>
@@ -49,7 +55,7 @@
     document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F7cfeeba2e3844f06b817b0b2cb423ce9' type='text/javascript'%3E%3C/script%3E"));
     </script>
 
-    
+
 
 </body>
 </html>
