--- a/list.html
+++ b/list.html
@@ -15,6 +15,10 @@
     <style>
     h2{text-align:center;}
     .map_list li{font-size:20px; line-height:45px;}
+
+    /*去除百度检测图片样式*/
+    img[src="http://eiv.baidu.com/hmt/icon/21.gif"]{display:none;}
+
     </style>
 </head>
 <body>
@@ -40,6 +44,6 @@
     </script>
 
 
-    
+
 </body>
 </html>
