--- a/name.html
+++ b/name.html
@@ -31,6 +31,11 @@
         float:left;
         width:100px;
     }
+
+
+    /*去除百度检测图片样式*/
+    img[src="http://eiv.baidu.com/hmt/icon/21.gif"]{display:none;}
+    
     </style>
 </head>
 <body>
