--- a/_posts/2013-08-24-javascript-function.html
+++ b/_posts/2013-08-24-javascript-function.html
@@ -58,7 +58,7 @@ var add = function(num1,num2){
 };
     {% endhighlight %}
 
-<p>以上代码运行会出现错误： <img src="/img/typeError.jpg" alt="类型错误"></p>
+<p>以上代码运行会出现错误： <img src="/img/typeError1.jpg" alt="类型错误1"></p>
 <p>原因在于：函数表达式中的函数位于一个初始化的语句中，而不是一个函数声明。在执行到函数所在的语句（定义）之前，变量add中不会保存有多函数的引用。</p>
 <p>另一个区别是函数声明会给函数指定一个名字，而函数表达式则创建一个匿名函数，然后将这个函数赋给一个变量。</p>
 
@@ -88,7 +88,53 @@ alert(anotherAdd(10,20));     // 30
 
 
 
+<h5>递归调用</h5>
+<p>递归函数是在一个函数通过名字调用自身的情况下构成的，比如：</p>
 
+    {% highlight javascript %}
+function factorial(num){
+    if(num <= 1){
+        return 1;
+    }  else {
+        return num * factorial(num-1);
+    }     
+};
+var result = factorial(5);
+alert(result);     // 120
+    {% endhighlight %}
+
+<p>这是一个经典的递归阶乘函数。执行函数时候会调用自身五次，返回5*4*3*2*1 的结果是120。但是如果稍微改写一下函数；</p>
+
+    {% highlight javascript %}
+function factorial(num){
+    if(num <= 1){
+        return 1;
+    }  else {
+        return num * factorial(num-1);
+    }     
+};
+var anotherFactorial = factorial;
+factorial = null;
+var result = anotherFactorial(5);
+alert(result);     // Uncaught TypeError: object is not a function 
+    {% endhighlight %}
+
+<p>以上代码运行会出现错误：<img src="/img/typeError2.jpg" alt="类型错误2">。原因是因为将函数factorial（）保存在另一个变量anotherFactorial中，然后将factorial变声设置为null,这个时候指向原函数的引用只剩下一个。但在接下来调用anotherFactorial（）的时候，由于要执行factorial（），而factorial已经不再是函数，所以就会导致错误。</p>
+<p>所以发现，再函数里面调用自身的时候，写上自身函数的名字并不是一个好办法（没有与函数名解耦，不方便扩展），所以Javascript规范定义了另外一种可以在函数内部调用自身的方式，即通过<strong>arguments.callee</strong>调用自身。所以上述代码可以写成：</p>
+
+    {% highlight javascript %}
+function factorial(num){
+    if(num <= 1){
+        return 1;
+    }  else {
+        return num * arguments.callee(num-1);
+    }     
+};
+var anotherFactorial = factorial;
+factorial = null;
+var result = anotherFactorial(5);
+alert(result);     // 120
+    {% endhighlight %}
 
 
 
