modified name pages

--- a/name.html
+++ b/name.html
@@ -13,6 +13,7 @@
     <script src="/js/html5.js"></script>
     <![endif]-->
     <style>
+
     h2{text-align:center; font-size:60px;}
     .name_list{
         width:320px;
@@ -42,18 +43,33 @@
 
     <h2>取名</h2>
     <ul class="name_list">
-        <li><span class="male">男孩</span> —— 韩远鹏</li>
-        <li><span class="female">女孩</span> —— 韩心怡</li>
+        <li><span class="male">男孩</span> —— 韩远航</li>
+        <li><span class="female">女孩</span> —— 韩雅楠</li>
     </ul>
+    <div class="clearfix"></div>
     <div class="name_box">
         备选：
         <ul>
+            <h4>男</h4>
+            <li>韩远鹏(男)</li>
             <li>韩志平(男)</li>
-            <li>韩志远(男)</li>
-            <li>韩慧慧(女)</li>
-            <li>韩明远(男)</li>
-            <li>韩小琴(女)</li>
-            <li>韩东生(男)</li>
+            <li>韩天翊(男)</li>
+            <li>韩子轩(男)</li>
+            <li>韩绍辉(男)</li>
+            <li>韩明轩(男)</li>
+            <li>韩健柏(男)</li>
+        </ul>
+    </div>
+    <h3>&nbsp;</h3>
+    <div class="name_box">
+        <ul>
+            <h4>女</h4>
+            <li>韩艾琳(女)</li>
+            <li>韩东卉(女)</li>
+            <li>韩瑞欣(女)</li>
+            <li>韩梦洁(女)</li>
+            <li>韩凌薇(女)</li>
+            <li>韩于宛儿(女)</li>
         </ul>
     </div>
 
