modified interview blog

--- a/_posts/2013-01-12-interview.html
+++ b/_posts/2013-01-12-interview.html
@@ -44,7 +44,7 @@ title : Web前端面试考察的一些知识点
         <li>设置padding 只有左右padding有效，上下则无效。</li>
     </ul>
 </p>
-<p>这里说的无效， 是指，它对其它元素的排列没有影响。也就是说，对于设置的margin,padding行内元素文档流里的上下元素来说，他们的间距不会因为上下margin或者上下padding而产生间距。但是就他本身而言，对于上下margin与padding是有效的。</p>
+<p>这里说的无效， 是指，它对其它元素的排列没有影响。也就是说，对于设置的margin,padding行内元素文档流里的上下元素来说，他们的间距不会因为上下margin或者上下padding而产生间距。但是就他本身而言，对于上下margin与上下padding是有效的。</p>
 
 
 
