modified interview blog

--- a/_posts/2013-01-12-interview.html
+++ b/_posts/2013-01-12-interview.html
@@ -20,7 +20,7 @@ title : Web前端面试考察的一些知识点
 
 
 <h4>1.  什么是语义化的HTML?有何意义？为什么要做到语义化？（高频率考题）</h4>
-<p>HTML的语义化可以理解为HTML的机构化，根据内容的结构化（内容语义化），选择合适的标签（代码语义化）便于开发者阅读和写出更优雅的代码的同时让浏览器的爬虫和机器很好地解析。</p>
+<p>HTML的语义化可以理解为HTML的结构化，根据内容的结构化（内容语义化），选择合适的标签（代码语义化）便于开发者阅读和写出更优雅的代码的同时让浏览器的爬虫和机器很好地解析。</p>
 <p>语义化的目的是
     <ul>
         <li>结构清晰——为了在没有CSS的情况下，页面也能呈现出很好地内容结构、代码结构</li>
