modified html5 defined blog

--- a/_posts/2014-09-16-html5-defined.html
+++ b/_posts/2014-09-16-html5-defined.html
@@ -68,7 +68,7 @@ Your browser does not support the video tag.
 
 
 <h4>HTML5 中的节段和外观概要</h4>
-<p>HTML5 中新的外观概要和节段元素一览: section, article, nav, header, footer, aside 和 hgroup.</p>
+<p>HTML5 中新的外观概要和节段元素一览: &lt;header>, &lt;footer>, &lt;nav>, &lt;section>, &lt;article>,  &lt;aside> 和 &lt;hgroup>等。</p>
 
 
 
