--- a/_posts/2013-01-12-interview.html
+++ b/_posts/2013-01-12-interview.html
@@ -1064,11 +1064,38 @@ function isString(str){
 
     {% endhighlight %}
 
+<h4>24.网页中实现一个计算当年还剩多少时间的倒数计时程序，要求网页上实时动态显示“××年还剩××天××时××分××秒”</h4>
+
+    {% highlight javascript %}
+
+function counter(){
+    var date   = new Date(); 
+    var year   = date.getFullYear();
+    var date2  = new Date(year,12,31,23,59,59);
+    var time   = (date2 - date)/1000;
+    var day    = Math.floor(time/(24*60*60));
+    var hour   = Math.floor(time%(24*60*60)/(60*60));
+    var minute = Math.floor(time%(24*60*60)%(60*60)/60);
+    var second = Math.floor(time%(24*60*60)%(60*60)%60);
+    var str =  year + "年还剩" + day + "天" + hour + "时" + minute + "分" + second + "秒";
+    document.getElementById("input").value = str;
+}
+window.setInterval("counter()",1000);
+
+    {% endhighlight %}
 
 
 
+<h4>25.请用javascript实现鼠标点击页面中的任意标签，alert该标签的名称?（注意IE和W3C兼容性）</h4>
 
+    {% highlight javascript %}
 
+document.onclick = function(e){
+    var e = e || window.event;
+    var target = (e["target"] || e["srcElement"]);
+    alert(target.tagName.toLowerCase());
+}
+    {% endhighlight %}
 
 
 
