modified name page

--- a/name.html
+++ b/name.html
@@ -51,6 +51,7 @@
         备选：
         <ul>
             <h4>男</h4>
+            <li>韩小峰(男)</li>
             <li>韩远鹏(男)</li>
             <li>韩志平(男)</li>
             <li>韩天翊(男)</li>
