--- a/_posts/2013-01-12-interview.html
+++ b/_posts/2013-01-12-interview.html
@@ -106,7 +106,7 @@ title : Web前端面试考察的一些知识点
     <!DOCTYPE html>
 <html>
 <head>
-<meta charset=\"utf-8\" />
+<meta charset="utf-8"/>
 <title>Hello HTML5</title>
 </head>
 <body>
