--- a/_posts/2013-01-12-interview.html
+++ b/_posts/2013-01-12-interview.html
@@ -27,7 +27,7 @@ title : Web前端面试考察的一些知识点
         <li>体验良好——例如title、alt用于解释名词或解释图片信息、label标签的活用</li>
         <li>SEO友好——和搜索引擎建立良好沟通，有助于爬虫抓取更多的有效信息：爬虫依赖于标签来确定上下文和各个关键字的权重</li>
         <li>方便解析——方便其他设备解析（如屏幕阅读器、盲人阅读器、移动设备）以意义的方式来渲染网页</li>
-        <li>可维护性——便于团队开发和维护，语义化更具可读性，是下一步吧网页的重要动向，遵循W3C标准的团队都遵循这个标准，可以减少差异化</li>
+        <li>可维护性——便于团队开发和维护，语义化更具可读性，遵循W3C标准的团队都遵循这个标准，可以减少差异化</li>
     </ul>
 </p>
 
