modified interview blog

--- a/_posts/2013-01-12-interview.html
+++ b/_posts/2013-01-12-interview.html
@@ -610,7 +610,7 @@ alert(temp);
 <p>DOM节点的创建
     <ul>
         <li>createDocumentFragment()    //创建一个DOM片段</li>
-        <li>createElement_x()   //创建一个具体的元素</li>
+        <li>createElement()   //创建一个具体的元素</li>
         <li>createTextNode()   //创建一个文本节点</li>
     </ul>
 </p>
