--- a/list.html
+++ b/list.html
@@ -25,6 +25,7 @@
 
     <h2>个人网站页面列表（备忘）</h2>
     <ul class="map_list">
+        <li><a href="/user.html">酷狗账号密码大全</a></li>
         <li><a href="/resume.html">于彪斌的简历</a></li>
         <li><a href="/uc_interview.html">2014.10.08——广州UC面试题目</a></li>
         <li><a href="/rubik.html">HTML5游戏——小魔方</a></li>
