modified user page style

--- a/user.html
+++ b/user.html
@@ -12,20 +12,15 @@
     <!--[if lt IE 9]>
     <script src="/js/html5.js"></script>
     <![endif]-->
-    <style>
-
-
-    
-    </style>
 </head>
 <body>
 
     <h2>于彪斌——酷狗账号密码一览表</h2>
 
 
-    <table class="border">
+    <table cellpadding="10" cellspacing="4">
         <tbody>
-            <tr style="background-color:#eaeaea; line-height:48px">
+            <tr style="background-color:#eaeaea; line-height:24px">
                 <th width="35%">功能</th>
                 <th width="40%">账号</th>
                 <th width="25%">密码</th>    
@@ -35,31 +30,23 @@
                 <td>maxyu</td>
                 <td>233716Cctv</td>
             </tr>
-            <tr>
-                <td>http://www.a.com/lab/a.js<br>
-                http://www.a.com/script/b.js</td>
-                <td>同一域名下不同文件夹</td>
-                <td>允许</td>
+            <tr style="background-color:#eaeaea;">
+                <td>考勤</td>
+                <td>GZ1576</td>
+                <td>233716Cctv</td>
             </tr>
             <tr>
-                <td>http://www.a.com:8000/a.js<br>
-                http://www.a.com/b.js</td>
-                <td>同一域名，不同端口</td>
-                <td>不允许</td>
+                <td>SVN</td>
+                <td>yubiaobin</td>
+                <td>kugou2014</td>
             </tr>
-            <tr>
-                <td>http://www.a.com/a.js<br>
-                https://www.a.com/b.js</td>
-                <td>同一域名，不同协议</td>
-                <td>不允许</td>
+            <tr style="background-color:#eaeaea;">
+                <td>禅道</td>
+                <td>yubiaobin</td>
+                <td>123123</td>
             </tr>
         </tbody>
     </table>
-
-
-
-
-
 
 
 </body>
