--- a/user.html
+++ b/user.html
@@ -36,6 +36,16 @@
                 <td>233716Cctv</td>
             </tr>
             <tr>
+                <td>RTX</td>
+                <td>于彪斌</td>
+                <td>233716Cctv</td>
+            </tr>
+            <tr style="background-color:#eaeaea;">
+                <td>Lotus Notes</td>
+                <td>于彪斌</td>
+                <td>Kugou001</td>
+            </tr>
+            <tr>
                 <td>SVN</td>
                 <td>yubiaobin</td>
                 <td>kugou2014</td>
